# UTCodeAssist

./: .gitignore  configgg.yaml  history.txt  package-lock.json  pnpm-lock.yaml  requirements.txt  test_results.html
.github/workflows/: jetbrains-release.yaml  main.yaml  pr_checks.yaml  preview.yaml
binary/: package-lock.json  package.json
binary/pkgJson/darwin-arm64/: package.json
binary/pkgJson/darwin-x64/: package.json
binary/pkgJson/linux-arm64/: package.json
binary/pkgJson/linux-x64/: package-lock.json  package.json
binary/pkgJson/win32-arm64/: package.json
binary/pkgJson/win32-x64/: package.json
core/: index.d.ts  package-lock.json  package.json  pnpm-lock.yaml
core/autocomplete/classification/: shouldCompleteMultiline.ts
core/config/: util.ts
core/config/yaml/: loadYaml.ts  models.ts
core/control-plane/: env.ts
cover_agent/: test_template_generator.py
cover_agent/lsp_logic/: ContextHelper.py
docs/: package-lock.json  package.json
extensions/vscode/: README.md  package-lock.json  package.json  pnpm-lock.yaml  utcoassist_rc_schema.json
gui/: package-lock.json  package.json  pnpm-lock.yaml
manual-testing-sandbox/nested-folder/: package-lock.json  package.json
mcp-unittest/: requirements.txt
mcp-unittest/src/: mcp_main.py
mcp_unittest/: .gitignore  .unittest_generator_config.json  README.md  configgg.yaml  demo.py  installation.md  pyproject.toml
mcp_unittest/docs/: continuedev_integration.md
mcp_unittest/examples/: StringUtils.java  arrayUtils.js  python_example.py
mcp_unittest/src/: main.py  mcp_main.py
mcp_unittest/src/config/: project_config.py
mcp_unittest/src/mcp/: server.py  server2.py
mcp_unittest/src/parsers/: code_analyzer.py
mcp_unittest/tests/: test_mcp_server.py
mock/: CHANGELOG.md  README.md  package.json  tsconfig.json
mock/src/: extension.ts
scripts/: install-dependencies.sh  uninstall.js
test-mcp/: weather.py
unittest_generator/: .gitignore  sample_code.py  test.py  test_sample_code.py
unittest_generator/cover_agent/: ai_caller.py  custom_logger.py  default_agent_completion.py  main.py  main_full_repo.py  record_replay_manager.py  unit_test_validator.py  utils.py
unittest_generator/templated_tests/: README.md
(+33 files in other folders)
