[project]
name = "mcp-unittest-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "arabic-reshaper>=3.0.0",
    "asn1crypto>=1.5.1",
    "blinker>=1.9.0",
    "brotli>=1.1.0",
    "certifi>=2025.4.26",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "cycler>=0.12.1",
    "defusedxml>=0.7.1",
    "distro>=1.9.0",
    "et-xmlfile>=2.0.0",
    "exceptiongroup>=1.3.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "fonttools>=4.58.2",
    "fpdf>=1.7.2",
    "greenlet>=3.2.3",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "kiwisolver>=1.4.8",
    "lxml>=5.4.0",
    "markdown>=3.8",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mcp[cli]>=1.9.3",
    "numpy>=2.2.6",
    "openai>=1.85.0",
    "oscrypto>=1.3.0",
    "packaging>=25.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pycparser>=2.22",
    "pydantic>=2.11.5",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.9.1",
    "pydyf>=0.11.0",
    "pyee>=13.0.0",
    "pyparsing>=3.2.3",
    "pypdf>=5.6.0",
    "pyphen>=0.17.2",
    "python-bidi>=0.6.6",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "reportlab>=4.4.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.7",
    "sse-starlette>=2.3.6",
    "starlette>=0.47.0",
    "supervisor>=4.2.5",
    "tabulate>=0.9.0",
    "tinycss2>=1.4.0",
    "tqdm>=4.67.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "typer>=0.16.0",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "uritools>=5.0.0",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.3",
    "webencodings>=0.5.1",
    "werkzeug>=3.1.3",
    "zopfli>=0.2.3.post1",
]
